<resources>
    <string name="app_name">Y2K</string>
    <string name="ghanaian_cedi_ghc">Cedi</string>
    <string name="dollar">Dollar</string>
    <string name="choose_your_currency">Currency</string>
    <string name="how_do_we_display_your_income_or_expenditure">How do we display your income or expenditure?</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="income_">Income</string>
    <string name="expenses">Expenditure</string>
    <string name="loans">Loans</string>
    <string name="budget">Budget</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="tips">Financial Tips</string>
    <string name="loan_name">Title</string>
    <string name="amount_loaned">Loan Amount</string>
    <string name="interest_rate">Interest Amount</string>
    <string name="borrowed">Borrowed</string>
    <string name="mode">Mode:</string>
    <string name="due_date">Click to select due date</string>
    <string name="pay_date">Click to select date</string>
    <string name="loan_details">Loan Details</string>
    <string name="lent">Lent</string>
    <string name="save">Save</string>
    <string name="add_loan">New Loan</string>
    <string name="empty">Empty</string>
    <string name="no_loan_to_display">No Loan to display.</string>
    <string name="no_budget_to_display">No Budget to display.</string>
    <string name="arrow">arrow</string>
    <string name="loan_payments">Payments</string>
    <string name="no_payment_has_been_made_for_this_loan">No payment has been made for this loan.</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="add_payment">Add Payment</string>
    <string name="enter_loan_name">Please enter the loan name</string>
    <string name="enter_loan_amount">Please enter the loan amount</string>
    <string name="enter_loan_interest">Please enter the loan interest</string>
    <string name="select_loan_due_date">Please select loan due date</string>
    <string name="an_error_occured">An error occurred while saving your data, please try again</string>
    <string name="loan_day_cant_">"Loan due day can not be before "</string>
    <string name="loan_due_month_cant">"Loan due month can not be before "</string>
    <string name="loan_due_year">"Loan due date can not be before "</string>
    <string name="amount_entered_exceeds" formatted="false">Amount entered exceeds loan amount left (%s%.2f).</string>
    <string name="cleared">Cleared</string>
    <string name="due">Due</string>
    <string name="amount_borrowed">Amount Borrowed</string>
    <string name="amount_lent">Amount Lent</string>
    <string name="total_amount">Total Amount</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="amount_owing">Amount Owing</string>
    <string name="finance_structure">Finance Structure</string>
    <string name="expenditure_categories">Expenditure Categories</string>
    <string name="income_categories">Income Categories</string>
    <string name="category_name">Category Title</string>
    <string name="add_category">New Category</string>
    <string name="pound_sterling">Pound Sterling</string>
    <string name="euro">Euro</string>
    <string name="naira">Naira</string>
    <string name="cfa">CFA</string>
    <string name="open">Opened</string>
    <string name="closed">Closed</string>
    <string name="view_link_directly">View Link Directly</string>
    <string name="share_article">Share Article</string>
    <string name="no_income">No %s has been added</string>
    <string name="previous">Previous</string>
    <string name="name">Title</string>
    <string name="detail">Detail</string>
    <string name="amount">Amount</string>
    <string name="no_category">No Category</string>
    <string name="add_income">Add Income</string>
    <string name="new_income">New Income</string>
    <string name="enter_income_name">Please enter title</string>
    <string name="enter_income_amount">Please enter amount</string>
    <string name="select_income_date">Please select date</string>
    <string name="add_loan_1">Add Loan</string>
    <string name="total_income">Total %s</string>
    <string name="pay_date_">Pay Date</string>
    <string name="budget_date">Budget Date</string>
    <string name="you_have_not_added">You have not added any %s category. Would you like to add one?</string>
    <string name="income_budget">Income</string>
    <string name="expenditure_budget">Expenditure</string>
    <string name="add_budget">Add Budget</string>
    <string name="budget_items">Budget Items</string>
    <string name="add_budget_item">Add Budget Item</string>
    <string name="enter_name_of_budget_item">Please enter title of the budget item</string>
    <string name="enter_amount_budget_item">Please enter amount of budget item</string>
    <string name="budget_items_total">Budget Items Total</string>
    <string name="add_at_least_budget_item">Please add at least one budget item</string>
    <string name="budget_type">Budget Type</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="expiring_budgets">Expiring Budgets</string>
    <string name="overview">Overview</string>
    <string name="total_income_">Total Income</string>
    <string name="total_expenditure">Total Expenses</string>
    <string name="expiring_income">Expiring Loans</string>
    <string name="done">Done</string>
    <string name="south_africa">South African rand</string>
    <string name="add_an_income_or_expense_to_see_chart">Add an Income or Expense to see chart.</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="selling">Selling</string>
    <string name="buying">Buying</string>
</resources>
