<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/cedis"
            android:title="@string/ghanaian_cedi_ghc" />
        <item
            android:id="@+id/dollar"
            android:title="@string/dollar" />

        <item
            android:id="@+id/pound_sterling"
            android:title="@string/pound_sterling" />

        <item
            android:id="@+id/euro"
            android:title="@string/euro" />

        <item
            android:id="@+id/naira"
            android:title="@string/naira" />

        <item
            android:id="@+id/south_africa"
            android:title="@string/south_africa" />

        <item
            android:id="@+id/cfa"
            android:title="@string/cfa" />

    </group>
</menu>