<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp"
            app:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:id="@+id/income_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:textColor="?colorAccent"
                        android:textSize="20sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:id="@+id/income_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/detail"
                        android:textColor="?colorAccent"
                        android:textSize="20sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/income_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/amount"
                        android:inputType="numberDecimal"
                        android:textColor="?colorAccent"
                        android:textSize="20sp" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/due_date"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="?selectableItemBackground"
                    android:gravity="center"
                    android:onClick="showDatePicker"
                    android:text="@string/pay_date"
                    android:textColor="?colorAccent"
                    android:textSize="20sp" />

                <View
                    android:id="@+id/divider_1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/windowBackground" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/category"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?colorAccent"
                        android:elevation="5dp"
                        android:gravity="center"
                        android:onClick="showCategories"
                        android:text="@string/no_category"
                        android:textColor="@color/white"
                        android:textSize="19sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/add_income"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/add_loan_button_selector"
                    android:gravity="center"
                    android:onClick="saveIncome"
                    android:text="@string/add_income"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </ScrollView>
</RelativeLayout>