<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <ImageView
        android:id="@+id/iv_onboarder_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@+id/title_holder"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:id="@+id/title_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <TextView
            android:id="@+id/tv_onboarder_title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            tools:text="Section First" />

        <TextView
            android:id="@+id/tv_onboarder_description"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:alpha="0.7"
            android:gravity="center"
            android:textColor="@color/white"
            tools:text="A long description about my application" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_holder"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/white_background"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/currency_choose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_your_currency"
                    android:textColor="#212121"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/choose_currency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:textAlignment="center">

                    <RadioButton
                        android:id="@+id/ghc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/ghanaian_cedi_ghc"
                        android:textColor="#212121"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/dollar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dollar"
                        android:textColor="#212121"
                        android:textSize="20sp" />
                </RadioGroup>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/windowBackground" />

            <LinearLayout
                android:id="@+id/choose_time_conf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:textAlignment="center">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/how_do_we_display_your_income_or_expenditure"
                    android:textColor="#212121"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/time_conf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/weekly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/weekly"
                        android:textColor="#212121"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/monthly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monthly"
                        android:textColor="#212121"
                        android:textSize="20sp" />
                </RadioGroup>


            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</RelativeLayout>