<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp"
            app:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:id="@+id/income_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:textColor="?colorAccent"
                        android:textSize="20sp" />

                </android.support.design.widget.TextInputLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/borrowed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="2dp"
                        android:checked="true"
                        android:text="@string/income_budget"
                        android:textColor="?colorAccent"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/lent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/expenditure_budget"
                        android:textColor="?colorAccent"
                        android:textSize="18sp" />

                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/windowBackground" />

                <TextView
                    android:id="@+id/due_date"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/due_date"
                    android:textColor="?colorAccent"
                    android:textSize="20sp" />


                <View
                    android:id="@+id/divider_1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/windowBackground" />

                <LinearLayout
                    android:id="@+id/color_picker_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/color_view"
                        android:layout_width="15dp"
                        android:layout_height="match_parent" />

                    <com.rtugeek.android.colorseekbar.ColorSeekBar
                        android:id="@+id/color_picker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:colors="@array/demo_colors_expanded" />

                </LinearLayout>

                <Button
                    android:id="@+id/add_budget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/add_loan_button_selector"
                    android:gravity="center"
                    android:onClick="saveLoan"
                    android:text="@string/add_budget"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </ScrollView>
</RelativeLayout>